--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,10 +7,12 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="tela_cadastro">Cadastro</string>
+    <string name="tela_login">Login</string>
 
     <string name="menu_home">Home</string>
     <string name="menu_settings">Settings</string>
     <string name="menu_library">Library</string>
     <string name="menu_cadastro">Cadastro</string>
+    <string name="menu_login">Login</string>
 
 </resources>
